# AoC2019

./: .gitignore  README.md
day1/: CMakeLists.txt  make_run.sh  make_test.sh
day1/src/: main.cpp
